--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@ body {
     
     font-size: 16px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
     
 }
 h3{
+    font-weight: bold;
+}
+.col-sm-8{
+    background-color: gray;
+}
+p{
     font-weight: bold;
 }
